Added layout and page rendering

--- a/pages/index.njk
+++ b/pages/index.njk
@@ -1,3 +1,5 @@
-<html>
-    <h1>{{ title }}</h1>
-</html>
+{% extends "../components/layout.njk" %}
+
+{% block body %}
+<h1>Re-Style Decorators</h1>
+{% endblock %}
