Organise html head

--- a/templates/layout.njk
+++ b/templates/layout.njk
@@ -2,12 +2,19 @@
 <html lang="en">
 
 <head>
+  <!-- Site identity -->
   <title>{{ page.title }}</title>
   <meta name="description" content="{{ meta.siteDescription }}">
   <link rel="icon" href="{{ meta.siteIcon }}">
+
+  <!-- Metadata -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- CSS -->
   <link rel="stylesheet" href="{{ config.stylesheet }}">
+
+  <!-- JS -->
   <script type="application/javascript" src="{{ config.bundle }}" defer></script>
 </head>
 
