--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,1 +1,15 @@
+@use 'fonts';
 @use 'module';
+
+h1 {
+    font-family: 'Poppins';
+    font-weight: 600;
+    font-size: 3.5rem;
+    text-transform: uppercase;
+}
+
+h2 {
+    font-family: 'Poppins';
+    font-weight: 600;
+    font-size: 3rem;
+}
