--- a/templates/layout.njk
+++ b/templates/layout.njk
@@ -19,6 +19,10 @@
 </head>
 
 <body>
+  <header class="header">
+    <img src="/images/RSD-logo.png" alt="R.S.D." class="header__logo">
+    <h1 class="header__company-name">Re-Style Decorators</h1>
+  </header>
   {% block body %}{% endblock %}
 </body>
 
