--- a/styles/core/fonts.scss
+++ b/styles/core/fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Arimo';
-    src: url('/fonts/Arimo/Arimo-Bold.tff') format("truetype");
+    src: url('/fonts/Arimo/Arimo-Bold.ttf');
     font-style: normal;
     font-weight: 700;
 }
