Added homepage banner

--- a/templates/pages/index.njk
+++ b/templates/pages/index.njk
@@ -1,4 +1,9 @@
 {% extends "../layout.njk" %}
 
 {% block body %}
+<div class="banner">
+  <img src="{{ page.banner.src }}" alt="{{ page.banner.alt }}">
+  <div class="banner__margin"></div>
+</div>
+
 {% endblock %}
