--- a/styles/util/colours.scss
+++ b/styles/util/colours.scss
@@ -3,7 +3,7 @@ $navy: #393642;
 $yellow: #F2C94C;
 
 $off-white: #F4F4F4;
-$light-grey: #F2F2F2;
+$light-grey: #ECECEC;
 $dark-grey: #C4C4C4;
 
 $red-fade-1: #E35A5A;
