Added colour chart divider

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -2,5 +2,6 @@
 @use 'core/fonts';
 
 @use 'components/banner';
+@use 'components/colour-chart-divider';
 @use 'components/header';
 @use 'components/menu';
