--- a/templates/pages/index.njk
+++ b/templates/pages/index.njk
@@ -1,9 +1,13 @@
 {% extends "../layout.njk" %}
 
+{% from '../components/colour-chart-divider.njk' import colourChartDivider %}
+
 {% block body %}
 <div class="banner">
   <img src="{{ page.banner.src }}" alt="{{ page.banner.alt }}">
   <div class="banner__margin"></div>
 </div>
+
+{% call colourChartDivider() %}{% endcall %}
 
 {% endblock %}
