--- a/styles/components/header.scss
+++ b/styles/components/header.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: $light-grey;
+    background-color: white;
     padding-top: 32px;
     padding-bottom: 16px;
 
@@ -16,8 +16,8 @@
     &__company-name {
         font-family: 'Poppins';
         font-weight: 600;
-        font-size: 16px;
-        line-height: 24px;
+        font-size: 18px;
+        line-height: 28px;
         text-transform: uppercase;  
         color: $navy;
     }
