--- a/templates/layout.njk
+++ b/templates/layout.njk
@@ -21,7 +21,7 @@
 <body>
   <header class="header">
     <a href="/">
-      <img src="/images/RSD-logo.png" alt="R.S.D." class="header__logo">
+      <img src="{{ headerLogo }}" alt="R.S.D." class="header__logo">
     </a>
     <h1 class="header__company-name">Re-Style Decorators</h1>
   </header>
