--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,5 +1,5 @@
-@use 'core/defaults';
-@use 'core/fonts';
+@use 'base/defaults';
+@use 'base/font-faces';
 
 @use 'components/banner';
 @use 'components/colour-chart-divider';
