--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,6 +1,8 @@
 @use 'base/defaults';
 @use 'base/font-faces';
 
+@use 'core/fonts';
+
 @use 'components/banner';
 @use 'components/colour-chart-divider';
 @use 'components/header';
