--- a/styles/util/colours.scss
+++ b/styles/util/colours.scss
@@ -2,6 +2,7 @@ $red: #AC2727;
 $navy: #393642;
 $yellow: #F2C94C;
 
+$white: #FFFFFF;
 $off-white: #F4F4F4;
 $light-grey: #ECECEC;
 $dark-grey: #C4C4C4;
