--- a/templates/layout.njk
+++ b/templates/layout.njk
@@ -23,7 +23,7 @@
     <a href="/">
       <img src="{{ headerLogo }}" alt="R.S.D." class="header__logo">
     </a>
-    <h1 class="header__company-name">Re-Style Decorators</h1>
+    <h1 class="company-name">Re-Style Decorators</h1>
   </header>
   <menu class="menu">
     {% for item in menu %}
