--- a/styles/util/fonts.scss
+++ b/styles/util/fonts.scss
@@ -1,3 +1,5 @@
+@use 'units' as *;
+
 @mixin title {
     font-family: 'Poppins';
     font-weight: 600;
@@ -34,4 +36,14 @@
     font-family: 'Arimo';
     font-weight: 700;
     font-size: 1rem;
+}
+
+@mixin company-name {
+    font-family: 'Poppins';
+    font-weight: 600;
+    font-size: px-to-rem(18);
+    line-height: px-to-rem(28);
+    margin-block-start: 0;
+    margin-block-end: 0;
+    text-transform: uppercase;
 }
