--- a/styles/util/fonts.scss
+++ b/styles/util/fonts.scss
@@ -29,6 +29,9 @@
     font-family: 'Arimo';
     font-weight: 700;
     font-size: 1rem;
+    line-height: 1;
+    margin-block-start: 0;
+    margin-block-end: 0;
     text-transform: uppercase;
 }
 
