--- a/styles/components/menu.scss
+++ b/styles/components/menu.scss
@@ -1,11 +1,9 @@
 @use '../util/colours' as *;
-@use '../util/fonts';
+@use '../util/fonts' as *;
+@use '../util/spacing' as *;
 
 .menu {
-    @include fonts.menu-item;
-
     background-color: $red;
-    list-style: none;
     display: flex;
 
     li {
@@ -13,12 +11,11 @@
         flex-basis: 0;
         display: flex;
         justify-content: center;
+        margin: $spacing-s 0;
 
         a {
-            color: white;
-            text-decoration: none;
-            text-align: center;
-            line-height: 2;
+            @include menu-item;
+            color: $white;
         }
     }
 }
