--- a/templates/pages/index.njk
+++ b/templates/pages/index.njk
@@ -8,6 +8,10 @@
   <div class="banner__margin"></div>
 </div>
 
+<div class="slogan">
+  <h2>{{ page.slogan }}</h2>
+</div>
+
 {% call colourChartDivider() %}{% endcall %}
 
 {% endblock %}
