--- a/styles/components/slogan.scss
+++ b/styles/components/slogan.scss
@@ -3,15 +3,19 @@
 @use '../util/spacing' as *;
 
 .slogan {
-    display: flex;
-    justify-content: center;
     background-color: $navy;
+    padding-bottom: $spacing-s;
 
-    h2 {
-        @include paragraph-large;
-        color: $white;
-        margin: $spacing-l 0;
-        max-width: 50%;
-        text-align: center;
+    &__text-container {
+        display: flex;
+        justify-content: center;
+
+        h2 {
+            @include paragraph-large;
+            color: $white;
+            margin: $spacing-l 0;
+            max-width: 50%;
+            text-align: center;
+        }
     }
 }
