--- a/styles/main.scss
+++ b/styles/main.scss
@@ -7,4 +7,5 @@
 @use 'components/colour-chart-divider';
 @use 'components/header';
 @use 'components/menu';
+@use 'components/section';
 @use 'components/slogan';
