--- a/templates/pages/index.njk
+++ b/templates/pages/index.njk
@@ -15,4 +15,11 @@
   {% call colourChartDivider() %}{% endcall %}
 </div>
 
+<section class="section section--white">
+  <div class="section__inner">
+    <h3>{{ page.services.title }}</h3>
+    <p>Lorem ipsum</p>
+  </div>
+</section>
+
 {% endblock %}
