--- a/styles/util/fonts.scss
+++ b/styles/util/fonts.scss
@@ -29,7 +29,7 @@
     font-size: px-to-rem(20);
     line-height: px-to-rem(30);
     margin-block-start: 0;
-    margin-block-end: 0;
+    margin-block-end: 1em;
 }
 
 @mixin menu-item {
