--- a/templates/pages/index.njk
+++ b/templates/pages/index.njk
@@ -22,4 +22,18 @@
   </div>
 </section>
 
+<section class="section section--red">
+  <div class="section__inner">
+    <h3>{{ page.services.title }}</h3>
+    <p>Lorem ipsum</p>
+  </div>
+</section>
+
+<section class="section section--grey">
+  <div class="section__inner">
+    <h3>{{ page.services.title }}</h3>
+    <p>Lorem ipsum</p>
+  </div>
+</section>
+
 {% endblock %}
