--- a/styles/main.scss
+++ b/styles/main.scss
@@ -7,5 +7,6 @@
 @use 'components/colour-chart-divider';
 @use 'components/header';
 @use 'components/menu';
+@use 'components/rotating-gallery';
 @use 'components/section';
 @use 'components/slogan';
