--- a/styles/components/rotating-gallery.scss
+++ b/styles/components/rotating-gallery.scss
@@ -9,36 +9,47 @@
     }
 
     &__item {
+        display: none;
+        transition: all 0.5s ease, display 0s;
+
         &--position-front {
+            display: block;
             left: 200px;
             top: 0;
             width: 400px;
             height: 400px;
             z-index: 2;
+            opacity: 1;
         }
 
         &--position-left {
+            display: block;
             left: 0;
             top: 100px;
             width: 200px;
             height: 200px;
             z-index: 1;
+            opacity: 0.5;
         }
 
         &--position-right {
+            display: block;
             left: 600px;
             top: 100px;
             width: 200px;
             height: 200px;
             z-index: 1;
+            opacity: 0.5;
         }
 
         &--position-back {
+            display: block;
             left: 350px;
             top: 150px;
             width: 100px;
             height: 100px;
             z-index: 0;
+            opacity: 0;
         }
     }
 }
