Added inline icon

--- a/templates/layout.njk
+++ b/templates/layout.njk
@@ -19,6 +19,8 @@
 </head>
 
 <body>
+  {% include "./icons.njk" %}
+
   <header class="header">
     <a href="/">
       <img src="{{ headerLogo }}" alt="R.S.D." class="header__logo">
