--- a/templates/pages/index.njk
+++ b/templates/pages/index.njk
@@ -23,7 +23,7 @@
         <div class="services-block__column">
           {% for item in section.items %}
             <div class="services-block__row">
-              
+              <svg><use href="#{{ item.icon }}" /></svg>
             </div>
           {% endfor %}
         </div>
