--- a/templates/icons.njk
+++ b/templates/icons.njk
@@ -1,5 +1,6 @@
-<!--
-Icon definitions
+<div style="display: none;">
+
+<!-- Icon definitions
 
 To add a new icon:
   1. Find a monocolour svg (e.g. from svg repo)
@@ -17,7 +18,6 @@ To add a new icon:
       <svg><use href="#..." /></svg>
 
 -->
-<div style="display: none;">
 
 
 <!-- icon-apartment-building -->
