--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,4 +9,5 @@
 @use 'components/menu';
 @use 'components/rotating-gallery';
 @use 'components/section';
+@use 'components/services-block';
 @use 'components/slogan';
