--- a/styles/rules/header.scss
+++ b/styles/rules/header.scss
@@ -8,8 +8,8 @@
     align-items: center;
     background-color: $white;
     color: $navy;
-    padding-top: $spacing-l;
-    padding-bottom: $spacing-m;
+    padding-top: $spacing-m;
+    padding-bottom: $spacing-s;
 
     &__logo {
         height: px-to-rem(54);
