--- a/styles/util/spacing.scss
+++ b/styles/util/spacing.scss
@@ -1,3 +1,5 @@
-$spacing-l: 24px;
-$spacing-m: 12px;
-$spacing-s: 8px;
+$spacing-xl: 48px;
+$spacing-l: 36px;
+$spacing-m: 24px;
+$spacing-s: 12px;
+$spacing-xs: 8px;
