--- a/styles/rules/menu.scss
+++ b/styles/rules/menu.scss
@@ -11,7 +11,7 @@
         flex-basis: 0;
         display: flex;
         justify-content: center;
-        margin: $spacing-s 0;
+        margin: $spacing-xs 0;
 
         a {
             @include menu-item;
