--- a/styles/rules/services-block.scss
+++ b/styles/rules/services-block.scss
@@ -2,23 +2,25 @@
 
 .services-block {
     display: flex;
-    gap: 60px;
     padding-bottom: 60px;
 
     &__column {
         display: flex;
-        gap: 30px;
+        margin-right: 30px;
         flex-direction: column;
         flex-basis: 0;
         flex-grow: 1;
+
+        &:last-child {
+            margin-right: 0;
+        }
     }
 
     &__row {
         display: flex;
-        gap: 30px;
 
         svg {
-            margin: 5px 0;
+            margin: 5px 0 5px 30px;
             width: 50px;
             min-width: 50px;
             height: 50px;
