Red component draft 1 (basic adding)

--- a/templates/pages/index.njk
+++ b/templates/pages/index.njk
@@ -33,6 +33,19 @@
   </div>
 </section>
 
+<section class="section section--red">
+  <div class="section__inner">
+    <h3>{{ page.about.title }}</h3>
+    <div class="description-block">
+      <div class="description-block__column">
+        <p>{{ page.about.description.text }}</p>
+      </div>
+      <div class="description-block__image">
+      </div>
+    </div>
+  <div>
+</section>
+
 <section class="section section--grey">
   <div class="section__inner">
     <h3>{{ page.portfolio.title }}</h3>
