--- a/styles/main.scss
+++ b/styles/main.scss
@@ -3,6 +3,7 @@
 
 @use 'rules/banner';
 @use 'rules/colour-chart-divider';
+@use 'rules/description-block';
 @use 'rules/header';
 @use 'rules/menu';
 @use 'rules/rotating-gallery';
