--- a/styles/rules/services-block.scss
+++ b/styles/rules/services-block.scss
@@ -20,7 +20,7 @@
         display: flex;
 
         svg {
-            margin: 5px 0 5px 30px;
+            margin: 5px 30px 5px 0;
             width: 50px;
             min-width: 50px;
             height: 50px;
