--- a/styles/rules/services-block.scss
+++ b/styles/rules/services-block.scss
@@ -18,6 +18,11 @@
 
     &__row {
         display: flex;
+        margin-bottom: 30px;
+
+        &:last-child {
+            margin-bottom: 0;
+        }
 
         svg {
             margin: 5px 30px 5px 0;
