--- a/templates/pages/index.njk
+++ b/templates/pages/index.njk
@@ -33,7 +33,7 @@
   </div>
 </section>
 
-<section class="section section--red">
+<section id="about" class="section section--red">
   <div class="section__inner">
     <h3>{{ page.about.title }}</h3>
     <div class="description-block">
@@ -46,7 +46,7 @@
   <div>
 </section>
 
-<section class="section section--grey">
+<section id="work" class="section section--grey">
   <div class="section__inner">
     <h3>{{ page.portfolio.title }}</h3>
     <div class="rotating-gallery">
@@ -57,6 +57,12 @@
       <button class="rotating-gallery__button--back">Back</button>
     </div>
   </div>
+</section>
+
+<section id="contact" class="section section--red">
+  <div class="section__inner">
+
+  <div>
 </section>
 
 {% endblock %}
