--- a/templates/pages/index.njk
+++ b/templates/pages/index.njk
@@ -38,7 +38,9 @@
     <h3>{{ page.about.title }}</h3>
     <div class="description-block">
       <div class="description-block__column">
-        <p>{{ page.about.description.text }}</p>
+        {% for para in page.about.description.paragraphs %}
+          <p>{{ para }}</p>
+        {% endfor %}
       </div>
       <div class="description-block__image">
       </div>
