--- a/templates/layout.njk
+++ b/templates/layout.njk
@@ -34,6 +34,20 @@
   </menu>
   {% block body %}{% endblock %}
   {% include "./icons.njk" %}
+  <address class="contact">
+    <div class="contact__email-and-phone">
+      <p>
+        Email:
+        <a href="mailto:{{ contact.email }}">
+          {{ contact.email }}
+        </a>
+      </p>
+      <p>Telephone: {{ contact.telephone }}</p>
+    </div>
+    <div class="contact__address">
+      <p>{{ contact.address }}</p>
+    </div>
+  </address>
 </body>
 
 </html>
