Added contact details

--- a/templates/layout.njk
+++ b/templates/layout.njk
@@ -34,7 +34,7 @@
   </menu>
   {% block body %}{% endblock %}
   {% include "./icons.njk" %}
-  <address class="contact">
+  <address id="contact" class="contact">
     <div>
       <p class="contact__email">
         Email:
