Added basic clients section

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -4,7 +4,6 @@
 @use 'rules/banner';
 @use 'rules/colour-chart-divider';
 @use 'rules/contact';
-@use 'rules/description-block';
 @use 'rules/header';
 @use 'rules/menu';
 @use 'rules/rotating-gallery';
@@ -12,3 +11,4 @@
 @use 'rules/services-block';
 @use 'rules/slogan';
 @use 'rules/text';
+@use 'rules/text-block';
