--- a/styles/rules/text.scss
+++ b/styles/rules/text.scss
@@ -32,7 +32,7 @@
     @include company-name;
 }
 
-.text-block {
+.paragraph-group {
     p {
         margin: 1.1em 0;
     }
@@ -44,4 +44,9 @@
     p:last-child {
         margin-bottom: 0;
     }
+}
+
+.bullet-list {
+    list-style: inside;
+    margin: 0.5em 0 0.5em 1em;
 }
