--- a/styles/base/defaults.scss
+++ b/styles/base/defaults.scss
@@ -4,7 +4,11 @@
 	margin-block-end: 0;
 	padding: 0;
 	border: 0;
-	list-style: none;
+	
 	font-style: normal;
 	text-decoration: none;
+}
+
+ul, ol, menu {
+	list-style: none;
 }
