About content styling

--- a/templates/pages/index.njk
+++ b/templates/pages/index.njk
@@ -36,7 +36,7 @@
 <section id="about" class="section section--red">
   <div class="section__inner">
     <h3>{{ page.about.title }}</h3>
-    <div class="text-block">
+    <div class="text-block paragraph-group">
         {% for para in page.about.description.paragraphs %}
           <p>{{ para }}</p>
         {% endfor %}
