--- a/templates/pages/index.njk
+++ b/templates/pages/index.njk
@@ -4,7 +4,7 @@
 
 {% block body %}
 <div class="banner">
-  <img src="{{ page.banner.src }}" alt="{{ page.banner.alt }}">
+  <img src="{{ page.banner }}">
   <div class="banner__margin"></div>
 </div>
 
