Added arrow icons

--- a/templates/icons.njk
+++ b/templates/icons.njk
@@ -67,6 +67,24 @@ To add a new icon:
 </svg>
 
 
+<!-- icon-arrow-left -->
+
+<svg>
+  <symbol id="icon-arrow-left" viewBox="0 0 12 12" style="fill: currentColor;">
+    <polygon points="8.1464844,12 2.1464844,6 8.1464844,0 8.8535156,0.7070313 3.5605469,6 8.8535156,11.2929688 "/>
+  </symbol>
+</svg>
+
+
+<!-- icon-arrow-right -->
+
+<svg>
+  <symbol id="icon-arrow-right" viewBox="0 0 12 12" style="fill: currentColor;">
+    <polygon points="3.8535156,12 3.1464844,11.2929688 8.4394531,6 3.1464844,0.7070313 3.8535156,0 9.8535156,6 "/>
+  </symbol>
+</svg>
+
+
 <!-- icon-city -->
 <svg>
   <symbol id="icon-city" viewBox="0 0 512.001 512.001" style="fill: currentColor;">
