--- a/styles/rules/rotating-gallery.scss
+++ b/styles/rules/rotating-gallery.scss
@@ -1,53 +1,73 @@
 .rotating-gallery {
-    position: relative;
-    width: 800px;
-    height: 400px;
+    margin-top: 40px;
+    margin-bottom: 80px;
 
-    img {
-        position: absolute;
+    img, svg {
         object-fit: cover;
+        width: 100%;
+        height: 100%;
+    }
+
+    &__grid {
+        display: grid;
+        height: 400px;
+        grid-template-columns: repeat(24, 1fr);
+        grid-template-rows: repeat(8, 1fr);
+    }
+
+    &__button--forward {
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row-start: 4;
+        grid-row-end: 6;
+    }
+
+    &__button--back {
+        grid-column-start: 23;
+        grid-column-end: 25;
+        grid-row-start: 4;
+        grid-row-end: 6;
     }
 
     &__item {
         display: none;
-        transition: all 0.5s ease, display 0s;
+
+        &--position-left {
+            display: block;
+            grid-column-start: 3;
+            grid-column-end: 9;
+            grid-row-start: 3;
+            grid-row-end: 7;
+            z-index: 1;
+            opacity: 0.3;
+        }
 
         &--position-front {
             display: block;
-            left: 200px;
-            top: 0;
-            width: 600px;
-            height: 400px;
+            grid-column-start: 7;
+            grid-column-end: 19;
+            grid-row-start: 1;
+            grid-row-end: 9;
             z-index: 2;
             opacity: 1;
         }
 
-        &--position-left {
-            display: block;
-            left: 0;
-            top: 100px;
-            width: 300px;
-            height: 200px;
-            z-index: 1;
-            opacity: 0.5;
-        }
-
         &--position-right {
             display: block;
-            left: 700px;
-            top: 100px;
-            width: 300px;
-            height: 200px;
+            grid-column-start: 17;
+            grid-column-end: 23;
+            grid-row-start: 3;
+            grid-row-end: 7;
             z-index: 1;
-            opacity: 0.5;
+            opacity: 0.3;
         }
 
         &--position-back {
             display: block;
-            left: 350px;
-            top: 150px;
-            width: 150px;
-            height: 100px;
+            grid-column-start: 10;
+            grid-column-end: 13;
+            grid-row-start: 4;
+            grid-row-end: 6;
             z-index: 0;
             opacity: 0;
         }
