--- a/styles/rules/rotating-gallery.scss
+++ b/styles/rules/rotating-gallery.scss
@@ -1,11 +1,15 @@
+@use '../util/colours' as *;
+@use '../util/fonts' as *;
+
 .rotating-gallery {
     margin-top: 40px;
     margin-bottom: 80px;
 
     img, svg {
+        display: block;
         object-fit: cover;
+        height: calc(100% - 2em);
         width: 100%;
-        height: 100%;
     }
 
     &__grid {
@@ -15,14 +19,14 @@
         grid-template-rows: repeat(8, 1fr);
     }
 
-    &__button--forward {
+    &__button--back {
         grid-column-start: 1;
         grid-column-end: 3;
         grid-row-start: 4;
         grid-row-end: 6;
     }
 
-    &__button--back {
+    &__button--forward {
         grid-column-start: 23;
         grid-column-end: 25;
         grid-row-start: 4;
@@ -31,6 +35,7 @@
 
     &__item {
         display: none;
+        height: 100%;
 
         &--position-left {
             display: block;
@@ -71,5 +76,16 @@
             z-index: 0;
             opacity: 0;
         }
+    }
+
+    figcaption {
+        @include small-text;
+        background-color: $navy;
+        color: $white;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        height: 2em;
     }
 }
