--- a/templates/layout.njk
+++ b/templates/layout.njk
@@ -5,7 +5,7 @@
   <!-- Site identity -->
   <title>{{ page.title }}</title>
   <meta name="description" content="{{ meta.siteDescription }}">
-  <link rel="icon" href="{{ meta.siteIcon }}">
+  <link rel="icon" type="image/png" href="{{ meta.siteIcon }}">
 
   <!-- Metadata -->
   <meta charset="UTF-8">
