--- a/styles/rules/contact.scss
+++ b/styles/rules/contact.scss
@@ -1,5 +1,6 @@
 @use '../util/colours' as *;
 @use '../util/fonts' as *;
+@use '../util/screens' as *;
 @use '../util/spacing' as *;
 
 .contact {
@@ -11,6 +12,11 @@
     align-items: center;
     padding: $spacing-l 60px;
 
+    @include mobile {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
     &__email {
         margin-bottom: 1em;
     }
@@ -19,8 +25,17 @@
         color: $white;
     }
 
+    &__tel {
+        @include mobile {
+            margin-bottom: 1em;
+        }
+    }
+
     &__address {
         flex-grow: 1;
-        text-align: right;
+
+        @include desktop {
+            text-align: right;
+        }
     }
 }
