--- a/templates/layout.njk
+++ b/templates/layout.njk
@@ -42,7 +42,7 @@
           {{ contact.email }}
         </a>
       </p>
-      <p class="contact__tel">Telephone: {{ contact.telephone }}</p>
+      <p class="contact__tel">Tel: {{ contact.telephone }}</p>
     </div>
     <div class="contact__address">
       <p>{{ contact.address | nl2br | safe }}</p>
