--- a/styles/rules/contact.scss
+++ b/styles/rules/contact.scss
@@ -15,6 +15,7 @@
     @include mobile {
         flex-direction: column;
         align-items: flex-start;
+        padding: $spacing-l 30px;
     }
 
     &__email {
