--- a/styles/rules/rotating-gallery.scss
+++ b/styles/rules/rotating-gallery.scss
@@ -4,7 +4,7 @@
 
 .rotating-gallery {
     margin-top: 40px;
-    margin-bottom: 80px;
+    padding-bottom: 60px;
 
     img, svg {
         display: block;
