--- a/styles/rules/section.scss
+++ b/styles/rules/section.scss
@@ -22,7 +22,7 @@
 
     h3 {
         @include section-heading;
-        margin-top: 1em;
+        padding-top: 1em;
         margin-bottom: 0.5em;
     }
 
