--- a/styles/util/fonts.scss
+++ b/styles/util/fonts.scss
@@ -1,3 +1,4 @@
+@use 'screens' as *;
 @use 'units' as *;
 
 @mixin page-title {
@@ -25,8 +26,16 @@
 @mixin paragraph {
     font-family: 'Poppins';
     font-weight: 400;
-    font-size: px-to-rem(20);
-    line-height: px-to-rem(30);
+
+    @include desktop {
+        font-size: px-to-rem(20);
+        line-height: px-to-rem(30);
+    }
+
+    @include mobile {
+        font-size: px-to-rem(18);
+        line-height: px-to-rem(27);
+    }
 }
 
 @mixin spotlight-paragraph {
