Add certficate section

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -8,6 +8,7 @@
 @use 'rules/menu';
 @use 'rules/rotating-gallery';
 @use 'rules/section';
+@use 'rules/section-image';
 @use 'rules/services-block';
 @use 'rules/slogan';
 @use 'rules/text';
