--- a/styles/rules/section-image.scss
+++ b/styles/rules/section-image.scss
@@ -11,6 +11,7 @@
 
     &__image {
         object-fit: contain;
+        position: relative;
 
         @include desktop {
             width: 50%;
