--- a/styles/rules/section-image.scss
+++ b/styles/rules/section-image.scss
@@ -6,7 +6,7 @@
         display: flex;
         justify-content: center;
         margin-top: $spacing-m;
-        width: 100%;
+        max-width: 100%;
     }
 
     &__image {
